--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
     "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.5.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
